--- a/res/xml/dual_battery_setting.xml
+++ b/res/xml/dual_battery_setting.xml
@@ -2,6 +2,6 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
 	android:minWidth="100dip"
 	android:minHeight="120dip"
-	android:updatePeriodMillis="86400000"
+	android:updatePeriodMillis="0"
 	android:initialLayout="@layout/dual_battery_widget"
 />
